Jun 21, 2007

* Avoid leaking stream handle in http_get/3 on chunked encoding.

Jun 20, 2007

 * ENHANCED: Support chunked encoding in http_get/3 and http_post/4 on the
   new http_chunked library, reducing memory usage and overhead.

Jun 19, 2007

 * ADDED: Support chunked encoding through library(http/http_open) based on
   new http_chunked library.

Jun 16, 2007

 * ADDED: library(http/http_chunked).

Jun 7, 2007

 * ADDED: http_dispatch and http_authenticate libraries.

Jun 1, 2007

 * FIXED: Use new predicate_indicator frame attribute for safe error
   handling.

May 23, 2007

 * FIXED: Preserve extra request-headers over redirect.  Yves Raimond.

May 20, 2007

 * FIXED: redirection issues.  Yves Raimond.

Apr 12, 2007

  * ADDED: .svg to mimetypes

Apr 10, 2007

  * FIXED: Forcing UTF-8 character set.

Mar 22, 2007

  * FIXED: Bug#269: time-stamp was emitted in current locale.

Mar 19, 2007

  * ADDED: Include name of parameter in type-errors detected by
    http_parameters/2.

Mar 15, 2007

  * ADDED: Include peer in session management for better security.
  * ADDED: Broadcast session start/end to allow deletion of derived
    data.

Mar 11, 2007

  * FIXED: http_open/3: send Host: <host>:<port> if port is not 80.

Mar 9, 2007

  * ADDED: reply_html_page/2.  To be documented

  * ADDED: Pass protocol(http/https) into request.

Mar 7, 2007

  * FIXED: handle throw(http_reply(moved_temporary(URL))) properly.

Mar 6, 2007

  * ADDED: final_url option to http_open/3

Mar 5, 2007

  * MODIFIED: debug(header, ...) --> debug(http(header), ...)

  * ADDED: codes([Type], Codes) to http_post_data.

Feb 26, 2007

  * ADDED: Keep connections open on not_modified and replying files.

Feb 9, 2007

  * ADDED: Support for 302 (moved temporary) HTTP replies to the server.

Feb 8, 2007

  * ADDED: Map existence_error(http_location, URL) and 
    permission_error(http_location, access, URL) to appropriate HTTP
    headers.

Feb 2, 2007
