@@ -1,6 +1,11 @@
+Sep 26, 2007
+
+ * ADDED: authorization(basic(User, Passowrd)) to the options of http_open/3.
+   Now generates a permission error for common applicable 4xx errors.
+
 Jun 21, 2007
 
-* Avoid leaking stream handle in http_get/3 on chunked encoding.
+ * Avoid leaking stream handle in http_get/3 on chunked encoding.
 
 Jun 20, 2007
 
